--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "displayName": "BibTex Manager",
   "description": "",
   "version": "0.0.1",
+  "publisher": "matthiasschedel",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MattthiasSchedel/bibtex-fetcher"
+  },
   "engines": {
     "vscode": "^1.80.0"
   },
