--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "displayName": "BibTex Manager",
   "description": "",
   "version": "0.1.1",
-  "publisher": "matthiasschedel",
+  "icon": "icon.png",
+  "publisher": "res/setPath.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/MattthiasSchedel/bibtex-fetcher"
