--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "bibtex-manager",
-  "displayName": "BibTex Manager",
+  "displayName": "BibTeX Manager",
   "description": "",
   "version": "0.7.0",
-  "icon": "res/Bibfetch_Logo.png",
+  "icon": "media/Bibfetch_Logo.png",
   "publisher": "matthiasschedel",
   "repository": {
     "type": "git",
@@ -20,32 +20,56 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
-    "commands": [
-      {
-        "command": "bibtex-manager.helloWorld",
-        "title": "Hello World"
-      }
-    ],
-    "configuration": {
-      "title": "BibTex Manager",
-      "properties": {
-        "yourExtension.libraryFilePath": {
-          "type": "string",
-          "default": "library",
-          "description": "The file path for the library.bib file"
-        },
-        "yourExtension.citationSource": {
-          "type": "string",
-          "enum": [
-            "DBLP",
-            "Scholar Archive"
-          ],
-          "default": "Scholar Archive",
-          "description": "Choose the source for fetching citations."
-        }
-      }
-    }
-  },
+		"configuration": {
+			"title": "BibTeX Manager",
+			"properties": {
+			  "yourExtension.libraryFilePath": {
+				"type": "string",
+				"default": "library",
+				"description": "The file path for the library.bib file"
+			  }
+			}
+		},
+		"viewsContainers": {
+			"activitybar": [
+				{
+					"id": "bibViewer",
+					"title": "BibTeX Viewer",
+					"icon": "media/Bibfetch_Logo.png"
+				}
+			]
+		},
+		"views": {
+			"bibViewer": [
+				{
+					"id": "bibView",
+					"name": "BibTeX Entries"
+				},
+				{
+					"type": "webview",
+					"id": "searchView",
+					"name": "Look up BibTeX"
+				}
+			]
+		},
+		"commands": [
+			{
+				"command": "clearSearchList",
+				"category": "Calico Colors",
+				"title": "Clear Colors",
+				"icon": "$(clear-all)"
+			}
+		],
+		"menus": {
+			"view/title": [
+				{
+					"command": "clearSearchList",
+					"group": "navigation",
+					"when": "view == searchView"
+				}
+			]
+		}
+	},
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
@@ -68,6 +92,6 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "pdf-lib": "^1.17.1"
+    "glob": "^10.3.10"
   }
 }
